bug 800525: chat: don't wrap nicks in conversations, use ellipsis overflow instead (r=Paenglab)

--- a/mail/components/im/messages/main.css
+++ b/mail/components/im/messages/main.css
@@ -23,6 +23,7 @@
   padding-bottom: 5px;
   display: block;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .outgoing > .pseudo {
